--- a/index.css
+++ b/index.css
@@ -119,6 +119,10 @@ nav {
 }
 
 .list { 
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    row-gap: 0.5rem;
+    place-items: center;
     list-style: none;
     padding:0;
     margin: 0;
@@ -133,10 +137,7 @@ nav {
     letter-spacing: 0.05rem;
     padding: 0.4rem;
     text-align: center;
-}
-
-.list > li:where(:not(:last-child)) {
-    margin-bottom: 0.5rem;
+    width: 100%
 }
 
 .input {
@@ -171,4 +172,38 @@ nav {
 
 .input:focus::placeholder {
     color: transparent
+}
+
+.gg-remove {
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 22px;
+    height: 22px;
+    border: 1px solid rgb(209, 122, 0);
+    border-radius: 22px;
+    margin-inline-start: 0.5rem;
+    background-color: rgb(255, 254, 233);
+    opacity: 0;
+    cursor: pointer;
+    transition: opacity 800ms ease
+}
+
+.gg-remove::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 10px;
+    height: 1px;
+    background: rgb(209, 122, 0);
+    border-radius: 5px;
+    top: 9px;
+    left: 5px;
+    opacity: 0;
+    transition: opacity 800ms ease
+}
+
+.gg-remove.appeared,
+.gg-remove.appeared::before {
+    opacity: 0.8
 }
